--- a/angular.json
+++ b/angular.json
@@ -30,12 +30,9 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+
+            "assets": ["src/favicon.ico", "src/assets"],
+
             "styles": ["src/styles.scss"],
             "scripts": []
           },
@@ -84,7 +81,7 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/assets"],
+            "assets": ["src/favicon.ico", "src/assets"],
 
             "styles": ["src/styles.scss"],
             "scripts": []
